--- a/MovieWatchlist/Views/WatchlistView.xaml
+++ b/MovieWatchlist/Views/WatchlistView.xaml
@@ -41,10 +41,12 @@
             IsEnabled="{Binding DataContext.ControlsEnabled, RelativeSource={RelativeSource FindAncestor, AncestorType=Window}}"
             Command="{Binding EditWatchlistCommand}">
         </Button>
-
+        
         <ListView 
             x:Name="WatchlistViewList" 
-            Grid.Row="2" 
+            Grid.Row="2"
+            Height="620"
+            ScrollViewer.VerticalScrollBarVisibility="Auto"
             HorizontalAlignment="Center"
             ItemsSource="{Binding WatchList}"
             SelectedItem="{Binding SelectedMotionPcture}">
